# Midi

./: CMakeLists.txt  IMidi1InputCallback.h  Midi.h  Midi1Input.cpp  Midi1Input.h  Midi1Input.tcc  Midi1Output.cpp  Midi1Output.h  MidiCCHighResOutputHandler.h  MidiCCInputHandler.cpp  MidiCCInputHandler.h  MidiCCPairMap.h  MidiInput.cpp  MidiInput.h  MidiInputCbBase.h  MidiInputMessage.h  MidiInput_inl.h  MidiMessage.h  MidiMessageIds.h  MidiMessageIdsExtension.h  MidiOutputMessage.h  NonBufferedMessageDrain.h  TransportHandling.h  TransportHandling.tcc  XRpnCommon.h  XRpnHandler.cpp  XRpnHandler.h  XRpnInputHandler.cpp  XRpnInputHandler.h  XRpnOutputHandler.cpp  XRpnOutputHandler.h  class-diagram.puml
.devcontainer/: Dockerfile  common.sh  devcontainer.json  run_docker_image.sh
MidiMedium/: CMakeLists.txt  IMidiInMedium.h  IMidiMedium.h  IMidiOutMedium.h
MidiMedium/Dummy/: CMakeLists.txt  MidiMediumDummy.cpp  MidiMediumDummy.h
MidiMedium/Usb/: CMakeLists.txt  UsbMidiIn.cpp  UsbMidiIn.h  UsbMidiOut.cpp  UsbMidiOut.h
MidiMedium/Usb/Ports/: CMakeLists.txt  DeviceConfigParser.cpp  DeviceConfigParser.h  DeviceTypes.h  MidiConfigParser.cpp  MidiConfigParser.h  RtMidiAdaptTypes.h  Usb2DeviceMapper.cpp  Usb2DeviceMapper.h  UsbMidiDeviceManager.cpp  UsbMidiDeviceManager.h  UsbMidiInputPortListProvider.cpp  UsbMidiInputPortListProvider.h  UsbMidiOutputPortListProvider.cpp  UsbMidiOutputPortListProvider.h  UsbMidiPortInfo.h  UsbMidiPortNotifier.h  UsbMidiPortNotifier.tcc
MidiMedium/Usb/Ports/Test/: CMakeLists.txt  main.cpp
MidiMedium/Usb/Ports/UnitTest/: CMakeLists.txt  UT_RtMidiAdaptTypes.cpp
MidiMedium/Usb/Ports/config/base/: UsbDeviceMapping.json
MidiMedium/Usb/Ports/config/local/: UsbDeviceMapping.json
MidiMedium/Usb/Test/: CMakeLists.txt  main.cpp
UnitTest/: CMakeLists.txt  UT_TransportHandling.cpp
cmake/: midi-config.cmake  midi-config.cmake.in
